<resources>
    <string name="app_name">WustBook</string>
    <string name="title_activity_libary">Libary</string>
    <string name="title_activity_my_libary">MyLibary</string>
    <string name="title_activity_home">WustBook</string>
    <string name="title_activity_uploadbook">Uploadbook</string>
    <string name="title_activity_base">SecondHandBook</string>
    <string name="title_activity_accessoffcampuss">AccessOffCampuss</string>
    <string name="title_activity_collection">Collection</string>
    <string name="title_activity_book_detail">BookDetail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <!--libaryAcitivity menu-->
    <string name="mylibary">MyLibary</string>
    <string name="accesslibary">Off campus access</string>

    <!--AccessOffCampussActivity URL-->
    <string name="AccessOffCampuss_webBaseUrl">http://122.205.143.147:8000/</string>
    <string name="AccessOffCampuss_webImgVerificationUrl">servlet/verifycode</string>
    <string name="AccessOffCampuss_weblandUrl">auth/login.do</string>

    <!--MyLibaryActivity URL-->
    <string name="MyLibary_webBaseUrl">http://opac.lib.wust.edu.cn:8080/reader/</string>
    <string name="MyLibary_webImgVerificationUrl">captcha.php?code=</string>
    <string name="MyLibary_weblandUrl">redr_verify.php</string>

    <string name="nomore">Not have more</string>
    <string name="notAllowedEmpty">Not allow to be Empty</string>

    <!--menu string-->
    <string name="search">Search</string>
    <string name="mystore">MyBookStore</string>
    <string name="uploadbooks">UploadBook</string>


    <!--LibaryActivity URL-->
    <string name="libarySearchUrl">http://opac.lib.wust.edu.cn:8080/opac/openlink.php</string>
    <string name="libaryBaseUrl">http://opac.lib.wust.edu.cn:8080/opac/</string>

    <string name="bookstoreUrl">http://192.168.23.1:8080/WustBooks/servlet/</string>

    <!--BookDetailActivity-->
    <string name="addsuccess">Collect success</string>
    <string name="addfail">Collect fail</string>
    <string name="deletesuccess">Cancel collection success </string>
    <string name="deletefail">Cancel collection fail </string>
    <string name="author">author:%1$s</string>

    <!--network handler-->
    <string name="network_no_response">unable to connect to server ,please check out network</string>
    <string name="network_excetption">network error</string>
    <string name="session_outoftime">Session is out of date,please sign in again</string>


    <string name="prompt_bookname">Please input book name</string>
    <!-- Strings related to login -->
    <string name="prompt_username">User name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_identifying_code">Identifying code</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_cancel">Cancel</string>
    <string name="remenber_account">Remenber the account</string>
    <string name="error_invalid_username">Wrong username</string>
    <string name="error_invalid_password">Wrong password</string>
    <string name="error_invalid_identifying_code">Wrong identifying code</string>
    <string name="error_field_required">User name cannot be empty</string>
    <string name="error_field_password">Password cannot be empty</string>
    <string name="error_field_identifying_code">Identifying code cannot be empty</string>

    <!--uploadactivity String-->
    <string name="action_submit">submit</string>
    <string name="bookname">Book name</string>
    <string name="bookauthor">Book author</string>
    <string name="bookprice">Book price</string>
    <string name="saler">Saler</string>
    <string name="phonenumbar">Phone number</string>
    
    <string name="prompt">Prompt</string>
    <string name="complete">Complete</string>
    <string name="sale">Sale</string>
    <string name="completemean">Complete:Completion of the transaction</string>
    <string name="salemean">Sale:The book timeout, click to re sell</string>
    <string name="salecomplete">The book has been successfully traded</string>
    <string name="changesuccess">Change success</string>
    <string name="changefail">Change fail</string>

    <string name="change">change</string>

    <string name="libarybookdetail">Call Number:%1$s \n Library collection:%2$s \n State:%3$s</string>


    <string name="back">back</string>
    <string name="forward">forword</string>
    <string name="close">close</string>


</resources>
